== Version 1.1 == CHANGES IN PROGRESS

* iOS: Fixed crash that occurred when trying to describe the matchers allOf, anyOf and isIn. Related to -ObjC linker flag.
* Changed documentation from HTML to Xcode documentation set. Run "make install" from the Documentation folder to install.
* Changed convenience methods to invoke superclass and return id, to support possibility of subclassing matchers.


== Version 1.0 ==

26 Oct 2010: First official release, including:
* Documentation
* Examples for
  - Cocoa
  - iOS
  - Creating a custom matcher

07 Oct 2010:
* For iOS: Added OCHamcrestIOS.framework target which provides release builds for both simulator and device into a single framework. Yes, a framework that can be used for iOS development without requiring users to mess with header search paths and link settings. Simply drop the framework into your project and #import <OCHamcrestIOS/OCHamcrestIOS.h> - Aaron Jacobs

06 Oct 2010:
* Work around bug in iPhone simulator that causes a test failure to terminate the app. Fix provided by Aaron Jacobs.

06 Sep 2010:
* Added static library target and changes for iOS.

01 Dec 2009:
* Added assertThat___ and equalTo___ for all types understood by NSNumber. For example: assertThatInt(42, equalToInt(42))

24 Nov 2009:
* Changed assertThat behavior to work more seamlessly with OCUnit: Instead of throwing an exception, it calls the same method as OCUnit's assertion macros to fail the test. As a result, a failing assertThat will not terminate the test, so that the test can record other failures. (Following normal OCUnit behavior, you can instruct the test case to terminate at the first failure by invoking raiseAfterFailure.)
This change requires that assertThat be called only within subclasses of SenTestCase, which wasn't the case before. You will need to recompile your tests.
If you need an original-style assertion that can be called outside of a SenTestCase, email your request to hamcrest-dev@googlegroups.com

24 Nov 2009: